skdep/force-app/main/default/objects/Account/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>