skdep/force-app/main/default/objects/Account/validationRules/Account_Number_is_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_is_Numeric</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK(AccountNumber),NOT(ISNUMBER(AccountNumber)))</errorConditionFormula>
    <errorMessage>Number should be Numeric</errorMessage>
</ValidationRule>