skdep/force-app/main/default/objects/Account/validationRules/Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AnnualRevenue &gt;0,AnnualRevenue &lt;10)</errorConditionFormula>
    <errorMessage>Anuual revenue in between 0 to 10</errorMessage>
</ValidationRule>